# ouffroad

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/: RELEASE.md
.github/workflows/: build_exe.yml  ci.yml  release.yml
front/app/: package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
front/app/src/: App.tsx  index.css
front/app/tests/: drag-drop.spec.ts  map.spec.ts  rename.spec.ts  sidebar.spec.ts
front/electron/: main.js  package-lock.json  package.json  preload.js
front/static/css/: styles.css
front/static/js/: main.js
front/templates/: index.html
packaging/: ouffroad.spec  run.py
scripts/: README_TESTS.md  build_exe.ps1  build_exe.sh  hatch_build.py  run_all_tests.sh
src/ouffroad/: __init__.py  __main__.py  api.py  config.py
src/ouffroad/core/: IFile.py  Parsers.py  exceptions.py  file_operations.py
src/ouffroad/media/: IMedia.py  MediaFactory.py  Photo.py  Video.py
src/ouffroad/repository/: FileSystemRepository.py  ITrackRepository.py
src/ouffroad/services/: ContentManager.py  MediaManager.py  TrackManager.py
src/ouffroad/storage/: ConfigurablePolicy.py  DateBasedPolicy.py  (+2 more)
tests/: test_api_file_operations.py  test_drag_drop_integration.py  test_file_operations.py  test_file_system_repository.py  test_fit_track.py  test_gpx_track.py  test_integration_file_operations.py  test_media.py  test_repository.py  test_services.py  test_storage_policies.py  test_track_factory.py
tests/integration/: conftest.py  test_api_flows.py
(+19 files in other folders)
